Ass-1/getting_started/test_files/syntax_errors/IllegalClassName.cpm
class 12 {        //@error - syntax (illegal class name)
}

main() : int {
  return 0
}